--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "homepage": "https://github.com/Taster101/Portfolio",
+  "homepage": "https://Taster101.github.io/Portfolio",
   "private": true,
   "dependencies": {
     "@babel/core": "^7.22.5",
